--- a/dvrl/requirements.txt
+++ b/dvrl/requirements.txt
@@ -5,6 +5,6 @@ lightgbm>=2.2.3
 matplotlib>=3.0.3
 numpy>=1.16.2
 pandas>=0.24.2
-sklearn>=0.20.3
-tensorflow>=1.13.1
+scikit-learn>=0.20.3
+tensorflow==1.14
 tqdm>=4.31.1
